--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -27,7 +27,9 @@ p{
 
 /* Header */
 
-/* Header */
+li a{
+  text-decoration: none;  
+}
 
 header{
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -35,7 +37,7 @@ header{
     position: sticky;
     background-color: #FFFFFF;
     top:0;
-    z-index: 10;
+    z-index: 1;
 }
 
 .container-header{
@@ -50,12 +52,16 @@ ul {
 }
 
 /* Main */
+#home{
+    scroll-margin-top: 5rem;
+}
 
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
+    padding: 50px 0px 0px 0px;
 }
 
  main img{
@@ -82,6 +88,7 @@ main {
     font-weight: 500;
     padding: 20px 20px;
     letter-spacing: 2px;
+    
 }
 
 .data-center p, .data-left p{
@@ -121,6 +128,7 @@ main {
 
 .feature{
     padding: 150px 0px 0px 0px;
+    scroll-margin-top: 4rem;
 }
 
 .detail{
@@ -409,19 +417,19 @@ footer div:first-child{
         color: #FA5757;
     }
 
-    li:hover{
+    li a:hover, li:hover{
         cursor:pointer;
         color: #FA5757;
     }
     
-    .hamburguer{
+    .hamburger{
         display: none;
     }
 
     /* Main */
     
     main{
-        height: calc(100vh - 95.6px);
+        height: calc(100vh - 75.6px);
         flex-direction: row-reverse;
         justify-content: space-around;
         padding: 0px 0px;
