--- a/assets/css/menuhidden.css
+++ b/assets/css/menuhidden.css
@@ -2,71 +2,757 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Rubik", sans-serif; 
+    color: #393e5b;
 }
 
-body {
-    background-color: #394166;
-    font-family: 'Rubik', sans-serif;   
-    font-weight: 300;
+h1{
+    font-size: 28px;
+    font-weight: bold;
+    color: #22263c;
+}
+
+h2{
+    font-size: 24px;
+}
+
+h3{
+    font-size: 20px
+}
+
+p{
+    font-size: 16px;
+    color: #93939a;
+}
+
+a{
     color: #FFFFFF;
+    text-decoration: none;
+}
+
+
+/* Header */
+
+
+header{
+    padding: 20px 30px 0px 30px;
+    background-color: #2a2d47;
     
 }
 
-header {
-    height: 100vh;
-    width: 95%;
-    max-width: 450px;
-    margin: 0 auto;
-    padding: 40px 30px 40px 30px;
+.container-header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;    
+    padding-bottom: 20px;
 }
 
-.menu-logo{
+.container-header div{
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid #FFFFFF;
-    padding-bottom: 45px;
-}
-
-nav div{
-    display: flex;
-    justify-content: center;
-    
 }
 
 ul{
     list-style: none;
+    text-align: center;
+}
+
+li{
+    padding: 30px;
+    border-bottom: 1px solid #93939a;
+    margin: 0 auto;
+    max-width: 300px;
+    color: #FFFFFF;
+}
+
+.login{
+    border: 2px solid #93939a;
+    border-radius:5px;
+    margin-top: 25px;
+    padding: 20px;
+}
+
+.container-header div img{
+    filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(21deg) brightness(97%) contrast(103%);
+}
+
+.nav-menu{
+    display: none;
+}
+
+.nav-menu .media{
+    margin-top: calc( 100vh - 470px);
+    gap: 40px;
+}
+
+.showmenu{
+    display: block;
+    position:absolute;
+    opacity: 0.9;
     width: 100%;
-    
+    left: 0px;
+    top:65px;
+    background-color: #2a2d47;
+    overflow: hidden;
 }
 
-.menu-option div ul li{
-    padding: 30px 0 0 0;
+div .exit{
+    color: #FFFFFF;
+    font-size: 25px;
+    font-weight: 400;
+    display: none;
 }
 
-nav ul li div{
-    font-size:20px;
-    letter-spacing: 3px;
-    border-bottom: 1px solid #FFFFFF;
-    padding-top:10px;
-    padding-bottom:10px;
-    
-}
 
-nav ul li div:hover{
+.hamburger:hover, .exit:hover{
     cursor: pointer;
-    border: 3px solid #FFFFFF;
+}
+
+/* Main */
+
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    padding: 50px 0px 0px 0px;
+    border: 1px salmon solid;
+    height: calc(100vh - 65px);
+}
+
+ main img{
+    max-width: 450px;
+    width: 100%;
+    padding-bottom: 50px;
+}
+
+.data-center, .data-left{
+    text-align: center;
+    padding: 0px 0px 0px 0px;
+    max-width: 450px;
+    width: 100%; 
+    margin: 0 auto;
+}
+
+.data-left h1{
+    letter-spacing: 2px;
+    font-weight: 500;
+    padding: 20px 20px;
+}
+
+.data-center h2, .data-left h2{
+    font-weight: 500;
+    padding: 20px 20px;
+    letter-spacing: 2px;
+    
+}
+
+.data-center p, .data-left p{
+    padding: 0px 20px 20px 20px;
+    line-height: 1.5;
+    letter-spacing: 0.5px;
+}
+
+.buttons{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.btn{
+    border: none;
+    padding: 14px 15px 14px 15px;
+    margin: 14px 14px;
     border-radius: 5px;
-    margin:-2px;
+    font-size: 14px;
+    box-shadow: 0px 5px 5px 0px #EEEEFA; 
+}
+
+.purple{
+    background-color:#5267DF;
+    color: #FFFFFF;
+    border: 2px solid transparent;
+}
+
+.white{
+    color: #93939a;
+    background-color: #F7F7F6;
+    border: 2px solid transparent;
+}
+
+/* Feature */
+
+.feature{
+    padding: 150px 0px 0px 0px;
+    scroll-margin-top: -7rem;
+}
+
+.detail{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.detail img{
+    max-width: 450px;
+    width: 85%;
+    padding-bottom:10px ;
+}
+
+.detail .data-left button{
+    display: none;
+}
+
+.container-button h3{
+    padding: 8px 0px;
+    margin: 0 auto;
+    font-weight: 400;
+    border-bottom: 5px solid transparent;
+}
+
+.container-button{
+    margin: 16px auto 42px auto;
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid #b8b9bc;
+    border-top: 1px solid #b8b9bc;
+    width: 70%;
+    max-width: 350px;
+    text-align: center;
+}
+
+.first-button h3{
+    border-bottom: 5px solid #FA5757;
+    color: #000000;
+}
+
+.last-buttons {
+    border-bottom: 1px solid #b8b9bc;
+    border-top: 1px solid #b8b9bc;
+    color: #93939a;
+}
+
+.container-question h3:hover, .last-buttons h3:hover{
+    cursor: pointer;
+    color: #FA5757;
+}
+
+/* Download */
+
+.download{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    margin: 0 auto;
+    padding: 150px 0px 0px 0px;
+}
+
+.browser{
+
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+}
+
+.browser article{
+    border-radius: 10px;
+    box-shadow: #DFDDDD 0px 4px 12px;
+    margin: 20px;
+    padding: 45px 0px 15px 0px; 
+    width: 90%;
+    max-width: 250px;
+    margin: 20px auto;
+}
+
+.browser article .purple{
+    margin: 15px 0px 5px 0px;
+    padding: 15px 30px;
+}
+
+.browser article img:first-child{
+    padding-bottom: 20px;
+}
+
+.dotted-line{
+    width: 100%;
+    padding-top: 35px;
+}
+
+/* Questions */
+
+.question{
+    padding: 150px 0px 120px 0px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.container-question div{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #b8b9bc;
+    max-width: 450px;
+    margin: 0 auto;
+    width: 90%;
+    text-align: start;
+}
+
+.container-question h3{
+    width: 95%;
+    font-weight: 400;
+    font-size: 17px;
+    padding: 20px 0px;
+}
+
+.question button{ 
+    margin-top:50px;
+    padding: 16px 25px;
+}
+
+.container-question div img:hover{
+    transform: rotate(180deg);
+    filter: invert(48%) sepia(53%) saturate(3690%) hue-rotate(329deg) brightness(98%) contrast(96%); 
+    cursor: pointer;
+}
+
+/* contact */
+
+.contact{
+    background-color: #5267DF;
+    padding: 80px 30px 80px 30px;
+    text-align: center;
+}
+
+.contact  p{
+    letter-spacing: 2.5px;
+    color: #FFFFFF;
+}
+
+.contact h2{
+    font-size:20px;
+    max-width: 280px;
+    margin: 0 auto;
+    color: #FFFFFF;
+    padding: 30px 0px;
+    letter-spacing: 3px;
+    line-height: 1.5;
+}
+
+.email-input:invalid {
+    border: 3px solid #FA5757;
+}
+
+.email-input:focus {
+    outline: none;    
+}
+
+.email-input::after {
+    content: "Invalid email address";
+    color: red;
+    font-size: 12px;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+}
+
+.contact div{
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    gap:20px;
+}
+
+.btn-contact{
+    border-radius:5px;
+    padding: 21.5px 0px;
+    border: none;
+    background-color: #FA5757;
+    color: #FFFFFF;
+}
+
+.contact div input{
+    border-radius: 5px;
+    border: none;
+    padding: 18px 18px;
+    margin-bottom: 0px;
+    font-size: 15px;
+    color: #b8b9bc;
+    border: 3px solid transparent;
+    
+}
+
+/* Footer */
+
+footer{
+    background-color: #252A45;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 70px 0px 70px 0px;
+}
+
+footer div {
+    display: flex;
+    align-items: center;
+}
+
+footer div h3{
+    padding: 20px 0px;
+    color:#FAFDFF;
+    font-size: 17px;
+    font-weight: 300;
+}
+
+footer div h3 a{
+    color:#FAFDFF;
+}
+
+footer div:first-child{
+    display: flex;
+    flex-direction: column;
+}
+
+.logo{
+    width: 150px;
+    height: 25px;
+    margin-bottom: 30px;
 }
 
 .media{
-    padding-top: calc(100vh - 500px);
-    gap: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 25px 0px;
 }
 
-.resto{
-    background-color: red;
-    height: 300px;
-    width: 300px;
+.media img{
+    margin: 0px 10px;
+}
+
+@media (min-width: 900px) {
+    
+    h1{
+        font-size: 36px;
+    }
+    
+    h2{
+        font-size: 28px;
+    }
+        
+    p{
+        font-size: 16px;
+    }
+
+    /* Header */
+
+    header{
+        max-width: 1200px;
+        padding:0px 0px 0px 0px ;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        margin: 0 auto;
+        width: 85%;
+        height: 60px;
+        background-color: #FFFFFF;
+    }
+
+    .container-header{
+        flex-direction: row;
+        justify-content: space-between;
+        padding-bottom: 0px;
+    }
+    
+    .nav-menu{
+        display: block;
+    }
+
+    ul{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        gap: 20px;
+    }
+
+    li{
+        padding: 20px 10px;
+        margin: 0px 20px;
+        border-bottom: 1px solid transparent;
+        color: #000000;
+    }
+
+    li:hover{
+        cursor:pointer;
+        color: #FA5757;
+    }
+    
+    .login{
+        padding: 10px 25px 10px 25px;
+        margin: 0px 0px 0px 0px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        background-color: #FA5757;
+        color:#FFFFFF;
+        border: 2px solid transparent;
+    }
+
+    .login:hover{
+        cursor: pointer;
+        border: 2px solid #FA5757;
+        background-color: #FFFFFF;
+        color: #FA5757;
+    }
+
+   .container-header div img{
+        filter: none;
+    }
+
+    .hamburger, .exit{
+        display: none;
+    } 
+
+    .media{
+        display: none;
+    }
+
+    .showmenu{
+        position: static;
+        background-color: #FFFFFF;
+        min-width: 10%;
+        max-width: 600px;
+    }
+
+    /* Main */
+    
+    main{
+        height: calc(100vh - 59.6px);
+        flex-direction: row-reverse;
+        justify-content: space-around;
+        padding: 0px 0px;
+        max-width: 1200px;
+        width: 85%;
+        margin: 0 auto;
+    }
+
+    .data-left h1{
+        padding-right: 40px;
+    }
+
+    main .data-left p{
+        padding-right: 90px;
+    }
+
+    .data-left{
+        min-width: 450px;
+        max-width: 600px;
+        text-align: start;
+    }
+
+    .data-center{
+        min-width: 600px;
+        max-width: 1200px;
+    }
+
+    main img {
+        max-width: 600px;
+        min-width: 450px;
+        width: 100%;
+        margin-top:60px;
+    }
+
+    .white:hover{
+        border: 2px solid #5f5f68;
+        color: #5f5f68;
+        cursor: pointer;
+    }
+    
+     .purple:hover{
+        border:2px solid #5267DF;
+        background-color: #FFFFFF;
+        color: #5267DF;
+        cursor: pointer;
+    }
+
+    .buttons{
+        justify-content: start;
+    }
+
+    .buttons button:first-child{
+        margin-left: 20px;
+    }
+
+    /* Feature */
+
+    .feature{
+        height: 100vh;
+        max-width: 1200px;
+        padding: 0px 0px 10px 0px;
+        margin: 0 auto;
+        width: 85%;
+        scroll-margin-top: 3rem;
+    }
+
+    .feature .data-center p{
+        width: 45%;
+        margin: 0 auto;
+    }
+
+    .last-buttons {
+        border-bottom: 1px solid transparent;
+        border-top: 1px solid transparent;
+    }
+    
+    .last-buttons h3:hover{
+        cursor: pointer;
+        color: #FA5757;
+    }
+
+    .container-button{
+        flex-direction: row;
+        max-width: 1200px;
+        justify-content: space-between;
+        border-top: 1px solid transparent;
+    }
+
+    .container-button div{
+        width: 100%; 
+    }
+
+    .detail{
+        flex-direction: row;
+        justify-content: center;
+        
+    }
+
+    .detail .data-left {
+        padding: 0px 30px 0px 80px;
+    }
+
+    .detail img {
+        max-width: 600px;
+        min-width: 450px;
+        width: 50%;
+      
+    }
+
+    .detail .data-left button{
+        display: block;
+    }
+
+/* Download */
+
+    .download {
+        height: 100vh;
+        max-width: 1200px;
+        width: 85%;
+        padding: 10px 0px 0px 0px;
+    } 
+
+    .download .data-center p{
+        width: 45%;
+        margin: 0 auto;
+    } 
+
+    .browser{
+        flex-direction: row;
+        max-width: 900px;
+    }
+
+    .browser {
+        align-items: flex-start;
+        width: 100%;
+    }
+
+    .browser article {
+        width: 100%;
+        min-width: 100px;
+    }
+
+    .browser .second{
+        margin-top: 60px;
+    }
+
+    .browser .third {
+        margin-top: 80px; 
+    }
+
+/* Question */
+
+    .question{
+        height: 100vh;
+        max-width: 1200px ;
+        width: 85%;
+        padding: 10px 20px 0px 20px;
+    }
+
+    .question .data-center p{
+        width: 45%;
+        margin: 0 auto;
+    } 
+
+    .container-question div{
+        max-width: 500px;
+    }
+
+    /* Contact */
+
+    .contact h2 {
+        max-width: 600px;
+        min-width: 280px;
+        width: 24%;
+        margin: 0 auto;
+        letter-spacing: 1.5px;
+    }
+
+    .contact div{
+        flex-direction: row;
+        justify-content: center;
+        max-width: 1200px ;
+    }
+
+    .btn-contact{
+        padding: 0px;
+        width: 10%; 
+       }
+
+    .contact div input{
+        padding: 10px;
+        max-width: 450px;
+       flex-grow: 1;
+    }
+
+/* Footer */
+
+    footer{
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+       
+        padding: 10px 120px;
+    }
+
+    footer div h3{
+        padding: 0px 0px;
+        max-width: 600px;
+    }
+
+    footer div h3:hover, .media div:hover{
+        color: #FA5757;
+        filter: invert(48%) sepia(53%) saturate(3690%) hue-rotate(329deg) brightness(98%) contrast(96%); 
+        cursor: pointer;
+    }
+
+    footer div:first-child{
+        flex-direction: row;
+        gap: 50px;
+        max-width: 600px;
+    }
+
+    .logo{
+        margin-bottom: 0px;
+    }
 }
